feat: Add support for custom AI providers and models
- Add configurable AI_PROVIDER (anthropic/openai/openrouter/deepseek/custom)
- Add AI_BASE_URL for custom endpoints and proxy services
- Add AI_MODEL for model selection
- Add AI_MAX_TOKENS and AI_TEMPERATURE for fine-tuning
- Implement factory pattern for AI service creation
- Add OpenAI-compatible API support for OpenRouter/DeepSeek/custom
- Update GitHub Actions to support new environment variables
- Maintain backward compatibility with ANTHROPIC_API_KEY
- Update documentation with provider configuration examples

This allows users to use any OpenAI-compatible API endpoint, including:
- OpenRouter (access to multiple models)
- DeepSeek (Chinese LLM)
- LiteLLM Proxy (unified API)
- Self-hosted models (Ollama, vLLM, etc.)

--- a/.github/workflows/daily-digest.yml
+++ b/.github/workflows/daily-digest.yml
@@ -33,6 +33,12 @@ jobs:
 
       - name: Generate digest
         env:
+          # New unified AI configuration (recommended)
+          AI_PROVIDER: ${{ secrets.AI_PROVIDER }}
+          AI_API_KEY: ${{ secrets.AI_API_KEY }}
+          AI_BASE_URL: ${{ secrets.AI_BASE_URL }}
+          AI_MODEL: ${{ secrets.AI_MODEL }}
+          # Legacy support (will be used if AI_API_KEY is not set)
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
         run: npm run generate
 
