--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "fs-extra": "^11.2.0",
+    "openai": "^4.24.1",
     "p-limit": "^3.1.0",
     "rss-parser": "^3.13.0"
   },
