feat: add 5 high-quality RSS sources after validation
Added new RSS sources tested with local RSS validation script:
- ByteByteGo (weight 1.3): System design & distributed systems
- Import AI (weight 1.3): AI research & policy by Jack Clark
- Engineer's Codex (weight 1.2): Big tech engineering case studies
- Martin Fowler (weight 1.2): Software architecture classics
- 美团技术团队 (weight 1.2): Chinese big tech engineering

Also added:
- npm run test:rss script for RSS source validation
- scripts/test-rss-sources.ts for testing new sources locally

Total sources: 8 → 13
Daily max articles: 15 → 20

Claude Co-authored

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "ts-node src/main.ts generate",
     "dev": "ts-node src/main.ts",
     "test": "jest",
-    "lint": "eslint src/**/*.ts"
+    "lint": "eslint src/**/*.ts",
+    "test:rss": "ts-node scripts/test-rss-sources.ts"
   },
   "keywords": [
     "news",
